file/map/ArcGISPro/GpMessages/468427908825000
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Monday, June 17, 2024 4:07:36 PM</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    Cell Transition
         ^^^^^^^^^^
﻿SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Monday, June 17, 2024 4:07:36 PM (Elapsed Time: 0.11 seconds)</msg></messages>